--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-hewwo worl
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Better Motherfucking Website</title>
+        <style type="text/css">
+            body {
+                margin: 40px auto;
+                max-width: 650px;
+                line-height:1.6;
+                font-size: 18px;
+                color: #444;
+                padding: 0 10px
+            }
+            h1,h2,h3 {
+                line-height:1.2
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>You did it, you found Kadachii's low-effort card website!</h1>
+        </header>
+        <p>
+
+        </p>
+        <h3>Here's some links to some stuff:</h3>
+        <ul>
+            <li>bsky: <a href="https://bsky.app/profile/kadachii.isadog.online">@kadachii.isadog.online</a></li>
+            <li>github: <a href="https://github.com/KadachiiVR/">kadachiivr</a></li>
+            <li>vrchat: <a href="https://vrchat.com/home/user/usr_5e2537d6-a9f7-442d-88cb-d06b652dae65">Kadachii</a></li>
+            <li><a href="https://kadachii.gumroad.com/">gumroad</a> (all freebies)</li>
+            <li>occasionally i put silly videos on <a href="https://www.youtube.com/@bottomtext1208">youtube</a></li>
+        </ul>
+        <h3>
+            Want to get in touch? Cool!
+        </h3>
+        <p>Hit me up on Discord (<a href="https://discord.com/users/91655274259025920">@kadachii</a>) or normie boomer email (<a href="mailto:kadachii@protonmail.com">kadachii@protonmail.com</a>)</p>
+        <p>TODO: put a public key and fingerprint up here too</p>
+        <hr>
+        <p><small>Kept it simple by ripping off the CSS from <a href="http://bettermotherfuckingwebsite.com/">bettermotherfuckingwebsite.com</a>. Thanks, nerd</small></p>
+    </body>
+</html>
