--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             h1,h2,h3 {
                 line-height:1.2
             }
+            .favicon {
+                height: 12pt;
+                font-size: 12pt
+            }
         </style>
     </head>
     <body>
@@ -27,11 +31,11 @@
         </p>
         <h3>Here's some links to some stuff:</h3>
         <ul>
-            <li>bsky: <a href="https://bsky.app/profile/kadachii.isadog.online">@kadachii.isadog.online</a></li>
-            <li>github: <a href="https://github.com/KadachiiVR/">kadachiivr</a></li>
-            <li>vrchat: <a href="https://vrchat.com/home/user/usr_5e2537d6-a9f7-442d-88cb-d06b652dae65">Kadachii</a></li>
-            <li><a href="https://kadachii.gumroad.com/">gumroad</a> (all freebies)</li>
-            <li>occasionally i put silly videos on <a href="https://www.youtube.com/@bottomtext1208">youtube</a></li>
+            <li><img class="favicon" src="https://web-cdn.bsky.app/static/favicon-16x16.png" /> bsky: <a href="https://bsky.app/profile/kadachii.isadog.online">@kadachii.isadog.online</a></li>
+            <li><img class="favicon" src="https://assets.vrchat.com/www/favicons/favicon-16x16.png" /> vrchat: <a href="https://vrchat.com/home/user/usr_5e2537d6-a9f7-442d-88cb-d06b652dae65">Kadachii</a></li>
+            <li><img class="favicon" src="https://github.githubassets.com/favicons/favicon.svg" /> github: <a href="https://github.com/KadachiiVR/">kadachiivr</a></li>
+            <li><span class="favicon">🤮</span> <a href="https://kadachii.gumroad.com/">gumroad</a> (all freebies)</li>
+            <li><img class="favicon" src="https://www.youtube.com/s/desktop/fb317ea9/img/logos/favicon.ico" /> occasionally i put silly videos on <a href="https://www.youtube.com/@bottomtext1208">youtube</a></li>
         </ul>
         <h3>
             Want to get in touch? Cool!
