add link to lizard button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>You did it, you found Kadachii's low-effort card website!</h1>
         </header>
         <p>
-
+        Here for the lizard button? <a href="https://kadachii.gumroad.com/l/lizardbutton">DIRECT LINK BE UPON YE</a>
         </p>
         <h3>Here's some links to some stuff:</h3>
         <ul>
